# fl-fog

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  __init__.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_ci_local.ps1  test_ci_local.sh  tox.ini
.github/workflows/: fl-fog-ci.yml
communication/: __init__.py  cloud_interface.py  edge_interface.py  peer_interface.py
config/: fog_config.yaml  mosquitto.conf  prometheus.yml
fog_node/: __init__.py  aggregator.py  edge_coordinator.py  model_cache.py  resource_monitor.py
tests/: conftest.py
tests/unit/: test_resource_monitor.py
